<?xml version="1.0" encoding="utf-8"?>
<!--View-->
<!-- using LinearLayout for the pizza party application -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/pizza_background"
    tools:context=".MainActivity">

    <!-- This TextView will used to display the text,which says Number of people -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/people_number"
        android:textSize="24sp"
        android:textColor = "@color/white"
        android:labelFor="@id/num_attend_edit_text" />

    <!-- This EditText is used to enter the text, for example, number of people who want to have pizza -->
    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:importantForAutofill="no"
        android:textColor = "@color/white"
        android:hint="@string/hint" />

    <!-- This TextView will used to display the text,which says How hungry? -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hungry"
        android:textSize="24sp"
        android:textColor = "@color/white"
        android:labelFor="@id/hungry_radio_group" />

    <!-- this RadioGroup will hold the all radio button, which are used in this application -->
    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/light_radio_button"
            android:text="@string/light"
            android:textColor = "@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!--  -->
        <RadioButton
            android:id="@+id/medium_radio_button"
            android:text="@string/medium"
            android:textColor = "@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <!--  -->
        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:text="@string/ravenous"
            android:textColor = "@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <!-- This TextView will used to display the text,which says Total pizzas:? -->
    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:text="@string/pizza"
        android:textColor = "@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:freezesText="true"/>

    <!-- When we click this button it will call calculateClick function and display to total pizzas needed. -->
    <Button
        android:id="@+id/calc_button"
        android:text="@string/cal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/CalcButton"
        android:onClick="calculateClick" />

</LinearLayout>